--- a/ET-release8.1/Unity/Assets/Scripts/Loader/Unity.Loader.asmdef
+++ b/ET-release8.1/Unity/Assets/Scripts/Loader/Unity.Loader.asmdef
@@ -7,7 +7,9 @@
         "HybridCLR.Runtime",
         "MemoryPack",
         "YooAsset",
-        "YooAsset.Editor"
+        "YooAsset.Editor",
+        "Unity.Model",
+        "FairyGui"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
